--- a/Portfolio-pro/package.json
+++ b/Portfolio-pro/package.json
@@ -17,7 +17,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6",
-    "react-typed": "^2.0.12"
+    "react-typed": "^2.0.12",
+    "sweetalert2": "^11.26.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
